fix spacing of right content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,7 +110,7 @@ img{
     list-style: none;
     padding: 0;
     background-color: #F3F3FF;
-    margin-top: 30px;
+    margin-top: 15px;
     padding: 15px;
     height: 100%;
 }
@@ -129,6 +129,12 @@ img{
 /* main content */
 .main-content{
     padding: 15px 0 45px;
+}
+.right-content{
+    padding-top: 15px;
+}
+.right-content .section-title{
+    margin: 15px 0 0;
 }
 
 /* ******main content*****/
